# personal_scripts

./: .gitignore  LICENSE  README.md  pyproject.toml  utils.py
src/mdscripts_dmunozg/: __init__.py  nmr.py
src/mdscripts_dmunozg/nmr/: __init__.py
